fix table versus align, change comparatifs by comparatif in navbar

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -7174,7 +7174,8 @@ nav {
   #compare th {
     width: 34%; }
   #compare td {
-    width: 33%; }
+    width: 33%;
+    text-align: center; }
   #compare h1 {
     margin-top: 8%; }
   #compare table {
